src/main/webapp/static/com/atomgraph/linkeddatahub/css/bootstrap.css
html { height: 100%; }
/* only the main navbar is fixed-top now; tab bar + action bar are sticky inside #tab-body */
body { height: calc(100% - 55px); padding-top: 55px; padding-bottom: 0; }
#tab-bar { position: sticky; top: 55px; z-index: 1000; margin-bottom: 0; }
/* Override Bootstrap's overflow:auto which would make action-bar sticky relative to #tab-content instead of the viewport */
#tab-content { overflow: visible; }
#tab-bar.navbar-inner { min-height: 36px; padding: 4px 0; background: #ccc; box-shadow: none; }
#tab-bar-list.nav-tabs { margin-bottom: 0; border-bottom: none; }
#tab-bar-list.nav-tabs > li > a { color: #007fff; padding: 8px 12px; text-shadow: none; border-color: #aaa #aaa transparent; }
#tab-bar-list.nav-tabs > li.active > a, #tab-bar .nav-tabs > li.active > a:hover { color: #555555; background: rgb(223, 223, 223); border-color: #aaa #aaa transparent; }
#tab-bar-list .tab-close { margin-left: 4px; font-size: 10px; color: #888; cursor: pointer; vertical-align: middle; }
#tab-bar-list .tab-close:hover { color: #333; }
body.embed { padding-top: 0; }
ul.dropdown-menu { max-height: 26em; overflow-x: hidden; overflow-y: auto; }
ul.dropdown-menu ul { margin: 0; }
.label { min-width: unset; min-height: unset; }
.brand.context { background-image: url('../icons/baseline_arrow_upward_white_18dp.png'); background-repeat: no-repeat; background-position: center center; height: 20px; width: 20px; background-size: 20px 20px; }
.brand.admin { background-image: url('../icons/ic_settings_white_24px.svg'); background-repeat: no-repeat; background-position: right center; padding-right: 30px; }
.btn.dropdown-toggle.btn-context { background-image: url('../icons/ic_apps_white_24px.svg'); background-position: center center; background-repeat: no-repeat; width: 34px; height: 34px; }
.btn.dropdown-toggle.btn-notifications { background-image: url('../icons/notifications-white-24dp.svg'); background-position: center center; background-repeat: no-repeat; width: 34px; height: 34px; }
.btn.dropdown-toggle.btn-apps { background-image: url('../icons/ic_apps_white_24px.svg'); background-position: center center; background-repeat: no-repeat; width: 34px; height: 34px; }
.btn.dropdown-toggle.btn-settings { background-image: url('../icons/settings_white_24dp.svg'); background-position: center center; background-repeat: no-repeat; width: 34px; height: 34px; }
.btn.dropdown-toggle.btn-agent { background-image: url('../icons/ic_account_circle_white_24px.svg'); background-position: center center; background-repeat: no-repeat; width: 34px; height: 34px; }
.dropdown-menu .btn-app-settings { background-color: inherit; display: block; text-align: left; width: 100%; padding-left: 20px; }
.dropdown-menu li form { margin-bottom: 0; }
.dropdown-menu li form button { width: 100%; text-align: left; }
#collapsing-top-navbar .brand { float: none; display: inline-block; margin-left: 0; padding: 10px 20px 10px 0; }
#collapsing-top-navbar .brand.context { display: inline-block; vertical-align: middle; }
.navbar-form input#uri { width: calc(100% - 50px); }
.navbar-form .btn-search { background-image: url('../icons/ic_search_white_24px.svg'); background-position: center center; background-repeat: no-repeat; width: 34px; height: 34px; }
.action-bar { position: sticky; top: var(--action-bar-top, 55px); z-index: 999; background: #dfdfdf; padding: 0; box-shadow: none; }
.action-bar form { margin-bottom: 0; }
.action-bar .span7 .row-fluid > * { margin-top: 10px; }
.action-bar .row-fluid > .span2, .action-bar .row-fluid > .span3 { margin-top: 10px; }
.action-bar .add-constructor, .dropdown-menu .add-constructor { background-color: inherit; display: block; text-align: left; width: 100%; }
.action-bar .add-constructor:hover { color: #ffffff; background-color: #007af5; }
.action-bar .breadcrumb { background-color: inherit; margin-bottom: 0; padding-left: 0; padding-top: 5px; }
.action-bar .breadcrumb .container-logo { background-image: url('../icons/folder.svg'); background-position: left center; background-repeat: no-repeat; padding-left: 28px; }
.action-bar .breadcrumb .item-logo { background-image: url('../icons/file.svg'); background-position: left center; background-repeat: no-repeat; padding-left: 28px; }
.action-bar .breadcrumb .btn-group { margin-top: -4px; }
.action-bar .breadcrumb-nav > .label-info { padding: 8px 15px; margin-right: 8px; font-size: inherit; background-color: #9954bb; }
.action-bar #doc-controls { text-align: right; padding-top: 5px; }
.action-bar #doc-controls .btn-edit { margin-top: -5px; margin-left: 10px; }
.action-bar p.alert { margin-bottom: 0; }
.nav-header.btn { color: inherit; }
.btn.btn-primary.create-action { background-image: url('../icons/ic_note_add_white_24px.svg'); background-position: 12px center; background-repeat: no-repeat; padding-left: 40px; /* height: 30px; */ }
.btn.create-action, a.create-action { background-image: url('../icons/ic_note_add_black_24px.svg'); background-position: 12px center; background-repeat: no-repeat; padding-left: 40px; /* height: 30px; */ }
button.btn.create-action { height: 30px; }
a.external::after { content: "⤴"; padding-left: 0.2em; }
a.btn.create-action { height: 20px; }
.create-resource .btn.create-action { margin-top: 1em; }
.btn-class { background: inherit; }
.btn-class span { color: black; }
.btn-group.open .btn.dropdown-toggle.create-action { background-image: url('../icons/ic_note_add_black_24px.svg'); }
li button.btn-edit-constructors, li button.btn-add-data, li button.btn-add-ontology, li button.btn-generate-containers { text-align: left; width: 100%; background-color: inherit; }
.btn-container { background-image: url('../icons/folder.svg'); }
.btn-item { background-image: url('../icons/file.svg'); }
.btn-app { background-image: url('../icons/apps_black_24dp.svg'); }
.btn-service { background-image: url('../icons/baseline-cloud-24px.svg'); }
.btn-query { background-image: url('../icons/ic_code_black_24px.svg'); }
/* ... */

